k8s/api.yml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    component: api
  ports:
    - port: 3333
      targetPort: 3333
    - port: 3030
      targetPort: 3030

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: api
  template:
    metadata:
      labels:
        component: api
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: api
          image: 'ghcr.io/uoft-utsc-cs-sandbox/unihub/api:latest'
          imagePullPolicy: Always
          ports:
            - containerPort: 3333
