k8s/webapp.yml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
spec:
  selector:
    component: webapp
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: webapp
  template:
    metadata:
      labels:
        component: webapp
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: webapp
          image: 'ghcr.io/uoft-utsc-cs-sandbox/unihub/api:latest'
          imagePullPolicy: Always
          ports:
            - containerPort: 80
